--- a/BMW_pricing.ipynb
+++ b/BMW_pricing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ENTREGABLE 1. BMW PRICING"
+    "## BMW PRICING"
    ]
   },
   {
